[project]
name = "anthropic-sdk-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "claude-agent-sdk>=0.1.19",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
